第一篇博客

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Do It Yourself
-page-title: Welcome !
+title: AddSalt.Blog
+page-title: Welcome to
 home-title: AddSalt's Blog
-description: 记录生活
+description: 加点盐才够咸
 ---
 
 {% include header.html %}
